# ghas-poc-demos

./: README.md
.github/workflows/: codeql.yml  codeql_multibuild.yml  endorjs.yml  gh_alerts_to_jira.yml  horusec_container_action.yml  trivy.yml  trivy_aws_terraform_issues.yml  trivy_aws_terraform_no_issues.yml  usingsecrets.yml
build_example/c_plus_plus/: CMakeLists.txt  README.md
build_example/c_plus_plus/include/: helper.h
build_example/c_plus_plus/src/: main.cpp
build_example/c_plus_plus/src/utils/: helper.cpp
build_example/dotnet-typescript/: README.md
build_example/dotnet-typescript/backend/: Program.cs  Startup.cs  appsettings.json  my-dotnet-app.csproj
build_example/dotnet-typescript/backend/Controllers/: HomeController.cs  UserController.cs
build_example/dotnet-typescript/backend/Models/: SampleModel.cs
build_example/dotnet-typescript/backend/Views/Home/: Index.cshtml
build_example/dotnet-typescript/frontend/: package.json  tsconfig.json  webpack.config.js
build_example/dotnet-typescript/frontend/src/: app.ts
build_example/dotnet-typescript/frontend/src/components/: SampleComponent.tsx
build_example/dotnet-typescript/frontend/src/styles/: main.css
build_example/dotnet-typescript/frontend/src/types/: index.ts
demo1/: README.md  package.json  vuln.ini
demo1/src/: index.js
demo2/: README.md
demo3/my-vulnerable-nodejs-app/: package-lock.json  package.json
demo4/: CodeAlerts.sh  Dependabot_alerts.sh  HighSeverity.sh  README.md  sample.env
